@@ -4,19 +4,24 @@ import dev.gerasimova.dto.BookResponseDto;
 import dev.gerasimova.dto.CreateBookDto;
 import dev.gerasimova.dto.CreateBookWithAuthorDto;
 import dev.gerasimova.dto.UpdateBookDto;
+import dev.gerasimova.dto.PaginationParam;
 import dev.gerasimova.exception.AuthorException;
 import dev.gerasimova.exception.BookException;
+import dev.gerasimova.mapper.AuthorMapper;
+import dev.gerasimova.mapper.BookMapper;
 import dev.gerasimova.model.Author;
 import dev.gerasimova.model.Book;
 import dev.gerasimova.repository.BookRepository;
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
-
-import java.util.Collections;
+import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
-import java.util.Optional;
 
 /**
  * Сервисный класс для управления бизнес-логикой работы с книгами.
@@ -27,10 +32,12 @@ import java.util.Optional;
  */
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class BookService {
     private final BookRepository bookRepository;
     private final AuthorService authorService;
-    private final EntityMapper entityMapper;
+    private final BookMapper bookMapper;
+    private final AuthorMapper authorMapper;
     @Value("${testTask10}")
     private boolean test;
     /**
@@ -38,20 +45,18 @@ public class BookService {
      *
      * @param id идентификатор книги для поиска
      * @return выводит дто для пользователей с информацией о книге
-     * @see BookRepository#findById(Object)
      */
     public BookResponseDto getBookById(Long id) {
         Book book = findBookById(id);
-        return entityMapper.toDto(book);
+        return bookMapper.toBookResponseDto(book);
     }
     /**
      * Находит книгу по идентификатору.
      *
      * @param id идентификатор книги для поиска
      * @return Book, если книга найдена или выбрасывает исключение BookException()
-     * @see BookRepository#findById(Object)
      */
-    public Book findBookById(Long id) {
+    private Book findBookById(Long id) {
         return bookRepository.findById(id).orElseThrow(() -> new BookException(id));
     }
     /**
@@ -61,13 +66,14 @@ public class BookService {
      * @return дто сохраненной книги
      * @see BookRepository#save(Object)
      */
+    @Transactional
     public BookResponseDto saveBook(CreateBookDto dto) {
         Author author = authorService.findAuthorById(dto.authorID())
                 .orElseThrow(() -> new AuthorException(dto.authorID()));
-        Book book = entityMapper.toEntity(dto);
+        Book book = bookMapper.toBook(dto);
         book.setAuthor(author);
         Book savedBook = bookRepository.save(book);
-        return entityMapper.toDto(savedBook);
+        return bookMapper.toBookResponseDto(savedBook);
     }
     /**
      * Обновляет книгу в хранилище.
@@ -76,6 +82,7 @@ public class BookService {
      * @return дто сохраненной книги
      * @see BookRepository#save(Object)
      */
+    @Transactional
     public BookResponseDto updateBook(UpdateBookDto dto, Long id) {
         Book existingBook = findBookById(id);
         Author author = authorService.findAuthorById(dto.authorID())
@@ -87,7 +94,7 @@ public class BookService {
         existingBook.setPrice(dto.price());
 
         Book savedBook = bookRepository.save(existingBook);
-        return entityMapper.toDto(savedBook);
+        return bookMapper.toBookResponseDto(savedBook);
     }
     /**
      * Удаляет книгу из хранилища.
@@ -95,6 +102,7 @@ public class BookService {
      * @param id уникальный идентификатор книги для удаления
      * @see BookRepository#delete(Object)
      */
+    @Transactional
     public void deleteBook(Long id) {
         bookRepository.delete(findBookById(id));
     }
@@ -102,20 +110,31 @@ public class BookService {
      * Возвращает список всех книг из хранилища.
      *
      * @return список всех книг, может быть пустым
-     * @see BookRepository#findAll()
+     * @see BookRepository#findAllBook(Pageable)
      */
-    public List<Book> getAllBooks() {
-        return bookRepository.findAllWithAuthor();
+    public Page<Book> getAllBooks(Pageable pageable) {
+        return bookRepository.findAllBook(pageable);
     }
     /**
      * Возвращает список всех книг конкретного автора из бд.
      *
      * @param authorSurname - фамилия автора
      * @return список всех книг конкретного автора, может быть пустым
-     * @see BookRepository#findByAuthorSurname(String)
+     * @see BookRepository#findByAuthorSurname(String, Pageable)
      */
-    public List<Book> findByAuthor(String authorSurname) {
-        return bookRepository.findByAuthorSurname(authorSurname);
+    public Page<Book> findByAuthor(String authorSurname,Pageable pageable ) {
+        return bookRepository.findByAuthorSurname(authorSurname, pageable);
+    }
+    /**
+     * Возвращает книгу по названию из бд.
+     *
+     * @param title - название книги
+     * @return найденная книга
+     * @throws BookException - если книги с заданным названием не существует
+     * @see BookRepository#findByTitle(String, Pageable)
+     */
+    public Page<Book> findByTitle(String title, Pageable pageable) {
+        return bookRepository.findByTitle(title, pageable);
     }
     /**
      * Возвращает книгу конкретного автора с заданным названием из бд.
@@ -123,10 +142,11 @@ public class BookService {
      * @param author - автор
      * @param title - название книги
      * @return книга найденная по названию и автору
-     * @see BookRepository#findByTitleAndAuthorSurname(String title, String author)
+     * @see BookRepository#findByTitleAndAuthorSurname(String, String)
      */
-    public Optional<Book> findByTitleAndAuthor(String title, String author) {
-        return bookRepository.findByTitleAndAuthorSurname(title, author);
+    public Book findByTitleAndAuthor(String title, String author) {
+        return bookRepository.findByTitleAndAuthorSurname(title, author)
+                .orElseThrow(()-> new BookException("Книги с названием " + title + "и автором "+ author +" не существует"));
     }
     /**
      * Возвращает список книг по части названия книги без учета регистра и сортирует их по году издания.
@@ -137,7 +157,7 @@ public class BookService {
      */
     public List<BookResponseDto> searchByTitleOrderByYear(String searchText) {
         return bookRepository.searchByTitleOrderByYear(searchText).stream()
-                .map(entityMapper::toDto)
+                .map(bookMapper::toBookResponseDto)
                 .toList();
     }
 
@@ -149,12 +169,12 @@ public class BookService {
      * @return дто с новой книгой
      * @throws AuthorException - если автор уже существует
      */
-    @Transactional(rollbackOn = Exception.class)
+    @Transactional()
     public BookResponseDto createBookWithAuthor(CreateBookWithAuthorDto dto) {
         if (authorService.existsByNameAndSurname(dto.authorName(), dto.authorSurname())) {
             throw new AuthorException("Автор уже существует: " + dto.authorName() + " " + dto.authorSurname());
         }
-        Author saveAuthor = authorService.saveAuthor(entityMapper.toEntity(dto));
+        Author saveAuthor = authorService.saveAuthor(authorMapper.toAuthor(dto));
         if (test) {
             throw new RuntimeException("Тест отката транзакции!");
         }
@@ -165,7 +185,7 @@ public class BookService {
                 .date(dto.yearRelease())
                 .build();
 
-        return entityMapper.toDto(bookRepository.save(book));
+        return bookMapper.toBookResponseDto(bookRepository.save(book));
     }
     /**
      * Метод для получения списка книг/списка книг конкретного автора/
@@ -173,23 +193,62 @@ public class BookService {
      *
      * @return - список книг или одну книг при поиске по автору и названию или пустой список.
      */
-    public List<BookResponseDto> searchBook(String authorSurname, String title) {
+    public Page<BookResponseDto> searchBook(String authorSurname, String title, PaginationParam paginationParam) {
         boolean hasAuthor = authorSurname != null && !authorSurname.isBlank();
         boolean hasTitle = title != null && !title.isBlank();
+        Pageable pageable = convertURLtoPageable(paginationParam.page(), paginationParam.size(), paginationParam.sort());
 
         if (hasAuthor && hasTitle) {
-            return findByTitleAndAuthor(title, authorSurname)
-                    .map(entityMapper::toDto)
-                    .map(List::of)
-                    .orElse(Collections.emptyList());
+            List<Book> list = List.of(findByTitleAndAuthor(title, authorSurname));
+            Page<Book> bookPage = new PageImpl<>(list, pageable, list.size());
+            return bookPage
+                    .map(bookMapper::toBookResponseDto);
         } else if (hasAuthor) {
-            return findByAuthor(authorSurname).stream()
-                    .map(entityMapper::toDto)
-                    .toList();
+            return findByAuthor(authorSurname, pageable)
+                    .map(bookMapper::toBookResponseDto);
+        } else if (hasTitle) {
+            return findByTitle(title, pageable)
+                    .map(bookMapper::toBookResponseDto);
         } else {
-            return getAllBooks().stream()
-                    .map(entityMapper::toDto)
-                    .toList();
+            return getAllBooks(pageable)
+                    .map(bookMapper::toBookResponseDto);
         }
+    }
+    /**
+     * Преобразует параметры URL в объект Pageable для пагинации и сортировки.
+     * Используется для создания объекта пагинации на основе параметров HTTP-запроса.
+     *
+     * @param page номер страницы (начинается с 0)
+     * @param size количество элементов на странице
+     * @param sort строка сортировки в формате "поле,направление" или просто "поле"
+     * @return объект Pageable с настройками пагинации и сортировки
+     * @see Pageable
+     * @see PageRequest
+     */
+    private Pageable convertURLtoPageable(int page, int size, String sort) {
+        Sort sortObj = (sort != null && !sort.isBlank())
+                ? parseSort(sort)
+                : Sort.unsorted();
+       return PageRequest.of(page, size, sortObj);
+    }
+    /**
+     * Парсит строку сортировки в объект Sort.
+     * Поддерживает два формата: простое поле ("title") и поле с направлением ("price,desc").
+     *
+     * @param sort строка для парсинга, может быть null или пустой
+     * @return объект Sort, либо Sort.unsorted() если строка пустая
+     * @see Sort
+     */
+    private Sort parseSort(String sort) {
+        if (sort == null || sort.isBlank()) {
+            return Sort.unsorted();
+        }
+        if (sort.contains(",")) {
+            String[] parts = sort.split(",");
+            if (parts.length == 2) {
+                return Sort.by(Sort.Direction.fromString(parts[1]), parts[0]);
+            }
+        }
+        return Sort.by(sort);
     }
 }
